@@ -68,6 +68,8 @@
 - Bugfix: Prevent a search with no search text at all.
 - Bugfix: The cache handling of searches is now working correctly.
 - Bugfix: Fixed the display of the search-options-symbol on Macs.
+- Bugfix: Fixed a possible JS error in the search, in case we are
+  searching through no payload.
 
 2.2.0
 - Added more search pattern and source code parsing to the
